# lambda-sample-ecs

./: .env.sample  .gitignore  Dockerfile  README.md  lambda_function.py  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: update-lambda-code.yaml
tests/: test_add_project_name_to_df.py  test_df_to_project_report.py  test_process_df.py  test_report_to_msg.py  test_validate_project_code.py
tools/: config.json  configure-creds-store.sh  install-credential-helper.sh  install-docker.sh
utils/: create-new-release-branch.sh  get_current_version.sh
