[project]
name = "lambda-sample-ecs"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[aws-sdk]>=3.11.0",
    "polars>=1.29.0",
    "requests>=2.32.3",
    "s3fs>=2025.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250328",
]
